catch_panic/ui_tests/fail/wrong_handler_type.stderr
error[E0631]: type mismatch in function arguments
  --> ui_tests/fail/wrong_handler_type.rs:9:25
   |
4  | pub fn trust_me(_env: JNIEnv, err: String) {
   | ------------------------------------------ found signature of `for<'r> fn(JNIEnv<'r>, String) -> _`
...
9  | #[catch_panic(handler = "trust_me")]
   | ------------------------^^^^^^^^^^--
   | |                       |
   | |                       expected signature of `for<'r> fn(JNIEnv<'r>, Box<(dyn Any + Send + 'static)>) -> _`
   | required by a bound introduced by this call
   |
note: required by a bound in `__catch_panic`
  --> src/handler.rs
   |
   |     H: FnOnce(JNIEnv, Box<dyn Any + Send + 'static>),
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `__catch_panic`
